# gashuu

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  THIRD_PARTY_LICENSES.md  codecov.yml  deny.toml  mise.coverage.toml  mise.toml  renovate.json
.cargo/: audit.toml  config.toml
.claude/plans/: issue82-natural-library-order.md  pr0a.md
.github/workflows/: ci.yml  pages.yml  release.yml  security.yml
crates/gashuu/: Cargo.toml  build.rs
crates/gashuu-core/: Cargo.toml
crates/gashuu-core/src/: archive_loader.rs  atomic_write.rs  cache.rs  cache_config.rs  error.rs  image_ops.rs  lib.rs  library.rs  library_store.rs  ordering.rs  persist.rs  reading_progress.rs  search.rs  settings.rs  spread.rs  test_fixtures.rs  thumbnail.rs  thumbnail_cache.rs  view_modes.rs  view_override.rs  viewport.rs  window_geometry.rs
crates/gashuu-core/src/page_source/: entry_policy.rs  folder.rs  mod.rs  naming.rs  rar.rs  zip.rs
crates/gashuu-core/src/snapshots/: gashuu_core__settings__tests__default_settings_json_snapshot.snap
crates/gashuu-core/src/update/: asset.rs  check.rs  mod.rs  packaging.rs  release.rs  verify.rs  version.rs
crates/gashuu/i18n/en/: gashuu.ftl
crates/gashuu/i18n/ja/: gashuu.ftl
crates/gashuu/packaging/linux/: gashuu.desktop
crates/gashuu/src/: add_books.rs  add_loader.rs  app.rs  carousel.rs  carousel_refresh.rs  cover_loader.rs  dialog_session.rs  enum_adapters.rs  keymap.rs  library_model.rs  main.rs  messages.rs  navigation.rs  open_book.rs  page_count_prefetch.rs  page_counter.rs  page_jump.rs  page_loader.rs  remove_books.rs  selection_projection.rs  thumbnail_strip.rs  ui_marshal.rs  use_cases.rs  view_sync.rs  viewer_state.rs  viewport.rs  window_state.rs
crates/gashuu/src/handlers/: drag_drop.rs  library.rs  mod.rs  settings.rs  update.rs  viewer.rs
crates/gashuu/src/i18n/: dynamic.rs  loader.rs  mod.rs
crates/gashuu/src/update/: install.rs  mod.rs  net.rs
crates/gashuu/src/viewer_state/: tests.rs
crates/gashuu/translations/ja/LC_MESSAGES/: gashuu.po
crates/gashuu/ui/: Carousel.slint  FirstRunGuide.slint  PageView.slint  Scrubber.slint  SettingsDialog.slint  ShortcutsOverlay.slint  Strings.slint  Theme.slint  ThumbnailStrip.slint  ViewerWindow.slint
crates/gashuu/ui/assets/: app-icon.icns
crates/gashuu/ui/components/: BookmarkRibbon.slint  Chip.slint  ConfirmDialog.slint  DangerButton.slint  DropZone.slint  Dropdown.slint  FocusButton.slint  GlassModal.slint  NavBar.slint  NavItem.slint  PrimaryButton.slint  ProgressBar.slint  ScrollIndicator.slint  SecondaryButton.slint  Segmented.slint  SelectionBadge.slint  SelectionToolbar.slint  SettingRow.slint  SettingsNavRow.slint  Stepper.slint  ThumbnailCell.slint  TitleBar.slint  Toggle.slint  UpdateAvailableDialog.slint  ViewerPill.slint
crates/gashuu/ui/settings/: AboutSettings.slint  DataSettings.slint  DisplaySettings.slint  GeneralSettings.slint  PerformanceSettings.slint  ReadingSettings.slint
docs/: README.md  architecture.md  conventions.md  patterns.md  quality-gates.md  scope.md  toolchain.md
docs/ADRs/: 0001-gui-framework-slint.md  0002-layered-two-crate-architecture.md  0003-image-loading-and-caching.md  0004-archive-abstraction-and-extraction.md  0005-settings-persistence.md  0006-reading-position-value-object.md  0007-per-book-view-overrides.md  0008-fluent-i18n.md  0009-reject-empty-books.md  0010-avif-decode-via-dav1d.md  0011-decoder-subprocess-isolation.md  0012-async-page-decode.md  0013-auto-update.md  README.md
docs/specs/: 2026-06-08-settings-clear-buttons-layout-design.md  2026-06-26-remember-window-geometry-design.md
ops/collect_images/: README.md  collect_images.sh
scripts/: check-docs.sh  check-release-linux-dist.sh  check-release-macos-dist.sh  check-tokens.sh
scripts/macos/: Open gashuu.command
site/: biome.json  index.html  knip.json  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
site/src/: App.tsx  index.css  main.tsx
site/src/components/: Button.tsx  FaqSection.tsx  FeaturesSection.tsx  Footer.tsx  Header.tsx  Hero.tsx  Kicker.tsx  PricingSection.tsx  VideoSection.tsx
site/src/lib/: asset.ts
