[package]
name = "gashuu-core"
version = "0.11.0"
edition = "2021"

[dependencies]
# `avif-native` enables AVIF DECODE via dav1d (BSD-2-Clause C library; the second
# native-toolchain exception after `unrar` — see docs/toolchain.md and ADR-0010).
image = { version = "0.25", features = ["avif-native"] }
walkdir = "2"
zip = { version = "8", default-features = false, features = ["deflate"] }
thiserror = "2"
lru = "0.18"
rayon = "1"
# Enabled only via the `testing` feature so downstream crates (gashuu) can use the
# generated MockPageSource in their tests without pulling mockall into release builds.
mockall = { version = "0.14", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
directories = "6.0.0"
unrar = "0.5"
# Atomic JSON persistence: write to a same-directory temp file, fsync, then rename
# over the target so settings.json / library.json are never left truncated on crash.
tempfile = "3"
# Semver comparison for the update checker (compares release tag vs CARGO_PKG_VERSION).
semver = "1"
# SHA-256 verification of downloaded release assets against SHA256SUMS.
sha2 = "0.11"

[dev-dependencies]
insta = "1.47.2"
base64 = "0.22"

[features]
testing = ["dep:mockall"]
