[package]
name = "gashuu-core"
version = "0.17.0"
edition = "2021"

[dependencies]
# Explicit format allowlist — `default-features = false` drops `image`'s default
# encoders/decoders we never use AND, critically, the `avif` ENCODE feature that
# pulls the whole `ravif` -> `rav1e` AV1 encoder (and its `paste` /
# RUSTSEC-2024-0436 advisory). gashuu only DECODES images; it encodes solely to
# PNG (cache/thumbnails/tests) and QOI (thumbnail cache). Formats: `png`, `jpeg`,
# `qoi` (thumbnail cache codec), and `avif-native` = AVIF DECODE via dav1d
# (BSD-2-Clause C library; the second native-toolchain exception after `unrar` —
# see docs/toolchain.md and ADR-0010). AVIF ENCODE is intentionally absent.
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "qoi",
    "avif-native",
] }
walkdir = "2"
zip = { version = "8", default-features = false, features = ["deflate"] }
thiserror = "2"
lru = "0.18"
rayon = "1"
# Enabled only via the `testing` feature so downstream crates (gashuu) can use the
# generated MockPageSource in their tests without pulling mockall into release builds.
mockall = { version = "0.15", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
directories = "6.0.0"
unrar = "0.5"
# Atomic JSON persistence: write to a same-directory temp file, fsync, then rename
# over the target so settings.json / library.json are never left truncated on crash.
tempfile = "3"
# Semver comparison for the update checker (compares release tag vs CARGO_PKG_VERSION).
semver = "1"
# SHA-256 verification of downloaded release assets against SHA256SUMS.
sha2 = "0.11"

[dev-dependencies]
insta = "1.47.2"
base64 = "0.22"

[features]
testing = ["dep:mockall"]
