[package]
name = "gashuu"
version = "0.1.0"
edition = "2021"

[dependencies]
gashuu-core = { path = "../gashuu-core" }
slint = "1"
rfd = "0.17"
rayon = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
color-eyre = "0.6"
i18n-embed = { version = "0.16", features = ["fluent-system"] }
i18n-embed-fl = "0.10"
rust-embed = "8"
unic-langid = { version = "0.9", features = ["macros"] }

[build-dependencies]
slint-build = "1"

# Windows-only: embeds app-icon.ico into gashuu.exe (see build.rs). Gated on
# `cfg(windows)` so it is never fetched or compiled on macOS/Linux builds.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dev-dependencies]
# `testing` feature exposes MockPageSource for ViewerState unit tests;
# image is used to synthesize tiny PNG bytes in tests (no committed binary fixtures).
gashuu-core = { path = "../gashuu-core", features = ["testing"] }
image = "0.25"
tempfile = "3"
# fluent-syntax parses .ftl catalogs for completeness tests (no runtime dep).
fluent-syntax = "0.12"

[package.metadata.bundle]
name = "gashuu"
identifier = "io.github.yasuflatland-lf.gashuu"
icon = ["ui/assets/app-icon.icns"]
category = "public.app-category.entertainment"
short_description = "Cross-platform manga viewer"
