[package]
name = "gashuu"
version = "0.9.0"
edition = "2021"

[dependencies]
gashuu-core = { path = "../gashuu-core" }
# `unstable-winit-030` exposes `slint::winit_030` (the winit backend's raw
# `WindowEvent` filter), used by `handlers/drag_drop.rs` to receive OS file-drop
# events Slint has no stable API for. That module is feature-gated and "may be
# removed or changed in future minor releases", so slint/slint-build are pinned
# to an exact version (=1.16.1) rather than `1` — a slint minor bump must be a
# deliberate, tested step. See docs/toolchain.md.
slint = { version = "=1.17.0", features = ["unstable-winit-030"] }
rfd = "0.17"
rayon = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
color-eyre = "0.6"
i18n-embed = { version = "0.16", features = ["fluent-system"] }
i18n-embed-fl = "0.10"
rust-embed = "8"
unic-langid = { version = "0.9", features = ["macros"] }

[build-dependencies]
# Pinned to match the exact `slint` version above (they must stay in lockstep).
slint-build = "=1.17.0"

# Windows-only: embeds app-icon.ico into gashuu.exe (see build.rs). Gated on
# `cfg(windows)` so it is never fetched or compiled on macOS/Linux builds.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dev-dependencies]
# `testing` feature exposes MockPageSource for ViewerState unit tests;
# image is used to synthesize tiny PNG bytes in tests (no committed binary fixtures).
gashuu-core = { path = "../gashuu-core", features = ["testing"] }
image = "0.25"
tempfile = "3"
# fluent-syntax is used only by tests to parse .ftl catalogs; it is not a
# direct production dependency (though it arrives transitively at runtime via
# i18n-embed's fluent-system feature and i18n-embed-fl).
fluent-syntax = "0.12"

[package.metadata.bundle]
name = "gashuu"
identifier = "io.github.yasuflatland-lf.gashuu"
icon = ["ui/assets/app-icon.icns"]
category = "public.app-category.entertainment"
short_description = "Cross-platform manga viewer"
