[package]
name = "gashuu"
version = "0.17.0"
edition = "2021"
license = "MIT"

[dependencies]
gashuu-core = { path = "../gashuu-core" }
# `unstable-winit-030` exposes `slint::winit_030` (the winit backend's raw
# `WindowEvent` filter), used by `handlers/drag_drop.rs` to receive OS file-drop
# events Slint has no stable API for. That module is feature-gated and "may be
# removed or changed in future minor releases", so slint/slint-build are pinned
# to an exact version (=1.16.1) rather than `1` — a slint minor bump must be a
# deliberate, tested step. See docs/toolchain.md.
slint = { version = "=1.17.1", features = ["unstable-winit-030"] }
rfd = "0.17"
rayon = "1"
# Bounded in-memory decoded-cover LRU in `cover_loader.rs` (kept off the disk
# cache read path). Same version core already resolves, so no new lockfile entry.
lru = "0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
color-eyre = "0.6"
i18n-embed = { version = "0.16", features = ["fluent-system"] }
i18n-embed-fl = "0.10"
rust-embed = "8"
unic-langid = { version = "0.9", features = ["macros"] }
# HTTP client for the update checker. Default features use rustls (no OpenSSL),
# so the build stays cross-platform and self-contained. Runs on a rayon thread.
ureq = "3"
# Open the release page in the browser and reveal downloaded files in the OS
# file manager (Finder/Explorer) for the guided-install paths. `reveal` is a
# non-default feature that gates `opener::reveal`.
opener = { version = "0.8", features = ["reveal"] }
# Resolve the platform Downloads directory for the guided-install download
# (macOS reveal path). Core already depends on this; the UI crate needs its
# own declaration to call `UserDirs` directly.
directories = "6"
# Extract the Windows portable .exe from the release .zip during self-update.
# Same version core already resolves (deflate-only), so no new lockfile entry.
zip = { version = "8", default-features = false, features = ["deflate"] }
# Atomically replace the running executable in place (handles the Windows
# rename-self restriction). Used for Windows-portable self-update; AppImage
# replaces $APPIMAGE directly instead (running exe is a read-only squashfs).
self-replace = "1"

[build-dependencies]
# Pinned to match the exact `slint` version above (they must stay in lockstep).
slint-build = "=1.17.1"

# Windows-only: embeds app-icon.ico into gashuu.exe (see build.rs). Gated on
# `cfg(windows)` so it is never fetched or compiled on macOS/Linux builds.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dev-dependencies]
# `testing` feature exposes MockPageSource for ViewerState unit tests;
# image is used to synthesize tiny PNG bytes in tests (no committed binary fixtures).
# `default-features = false` + `png` keeps the `ravif`/`rav1e` AVIF encoder (and
# its `paste` advisory) out of the graph — these tests only ever write PNG.
gashuu-core = { path = "../gashuu-core", features = ["testing"] }
image = { version = "0.25", default-features = false, features = ["png"] }
tempfile = "3"
# fluent-syntax is used only by tests to parse .ftl catalogs; it is not a
# direct production dependency (though it arrives transitively at runtime via
# i18n-embed's fluent-system feature and i18n-embed-fl).
fluent-syntax = "0.12"

[package.metadata.bundle]
name = "gashuu"
identifier = "io.github.yasuflatland-lf.gashuu"
icon = ["ui/assets/app-icon.icns"]
category = "public.app-category.entertainment"
short_description = "Cross-platform manga viewer"

# Linux .deb packaging, consumed by `cargo deb -p gashuu` in the release
# workflow. Runtime deps are auto-detected via dpkg-shlibdeps (`depends =
# "$auto"`) — the dav1d/fontconfig/freetype/xcb/xkbcommon shared libraries the
# release binary dynamically links become declared package dependencies. Asset
# source paths are relative to this Cargo.toml, except `target/release/...`
# which cargo-deb resolves to the real workspace target directory.
[package.metadata.deb]
maintainer = "Yasuyuki Takeo <yasuflatland@gmail.com>"
copyright = "2025-2026, Yasuyuki Takeo"
section = "graphics"
priority = "optional"
depends = "$auto"
extended-description = """\
gashuu is a fast, elegant cross-platform manga / comic reader built with Rust \
and Slint. It opens a folder of images or a .cbz/.zip/.cbr/.rar archive with \
two-page spreads, right-to-left binding, zoom/pan, a thumbnail strip, a \
cover-flow library, and persistent per-book settings, in an English / 日本語 UI."""
assets = [
    ["target/release/gashuu", "usr/bin/", "755"],
    ["packaging/linux/gashuu.desktop", "usr/share/applications/", "644"],
    ["ui/assets/app-icon.svg", "usr/share/icons/hicolor/scalable/apps/gashuu.svg", "644"],
]
